--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -5,6 +5,7 @@
         "profile_name": "default", 
         "project_name": "client", 
         "runtime": "python3.6", 
-        "s3_bucket": "hahaga-linebot"
+        "s3_bucket": "hahaga-linebot",
+        "keep_warm": "false"
     }
 }
