--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,9 @@ flask-cors = "*"
 bothub-cli = "*"
 loguru = "*"
 pylint = "*"
+pytest = "*"
+pytest-cov = "*"
+moto = "*"
 
 [requires]
 python_version = "3.6"
